# agentic-dev-orchestrator

./: .ado_security.json  .dockerignore  .editorconfig  .env.example  .env.template  .gitignore  .hadolint.yaml  .markdownlint.yml  .pre-commit-config.yaml  .releaserc.json  .yamllint.yml  ADAPTIVE_IMPLEMENTATION_STRATEGY.md  ADO_SDLC_ENHANCEMENT_REPORT.md  ARCHITECTURE.md  AUTONOMOUS_SDLC_ENHANCEMENT_REPORT.md  AUTONOMOUS_SDLC_IMPLEMENTATION_SUMMARY.md  AUTONOMOUS_SDLC_MATURITY_ENHANCEMENT_REPORT.md  AUTONOMOUS_VALUE_BACKLOG.md  AUTONOMOUS_WORKFLOW_INTEGRATION.md  CHANGELOG.md  CHECKPOINTED_SDLC_IMPLEMENTATION_SUMMARY.md  CODE_OF_CONDUCT.md  CONTINUOUS_IMPROVEMENT_REPORT.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_INSTRUCTIONS.md  Dockerfile  IMPLEMENTATION_COMPLETE_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  MANIFEST.in  MANUAL_SETUP_GUIDE.md  MANUAL_SETUP_REQUIRED.md  Makefile  PHASE1_IMPLEMENTATION_TEMPLATES.md  PROJECT_CHARTER.md  QUANTUM_SDLC_ARCHITECTURE.md  QUANTUM_SDLC_FINAL_SUMMARY.md  QUICKSTART.md  QUICK_START_GUIDE.md  README.md  (+73 more)
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.dev.yml  post-create.sh  post-start.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  project-metrics.json  pull_request_template.md  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  documentation.md  documentation.yml  enhancement.md  feature_request.md  feature_request.yml  security.md
.github/codeql/: codeql-config.yml
.github/workflows/: cd.yml  ci.yml  dependency-update.yml  release.yml  security.yml
.terragon/: config.yaml  continuous-improvement.py  execution-report-20250801-054707.json  execution-report-20250815-023212.json  improvement-metrics.json  learning-records.json  value-engine.py  value-metrics.json
.terragon/security-reports/: security_scan_20250816_191043.json  security_scan_20250816_191043.md  security_scan_20250816_191647.json  security_scan_20250816_191647.md  security_scan_20250825_111231.json  security_scan_20250825_111231.md
backlog/: pip-installable.json  sample-task.json  simple-task.json  test-coverage.json
completions/: ado.bash  ado.fish  ado.zsh
deployment/: production_deployment_guide.py
deployment_reports/: deployment_readiness_20250816_191438.json  deployment_readiness_20250816_191650.json  deployment_readiness_20250818_032505.json  deployment_readiness_20250819_200808.json  deployment_readiness_20250825_111733.json  deployment_readiness_latest.json
docker/: sentiment.Dockerfile
docs/: DEVELOPMENT.md  ROADMAP.md  SENTIMENT_ANALYSIS_GUIDE.md  SETUP_REQUIRED.md
docs/adr/: README.md  adr-001-wsjf-prioritization.md  adr-002-agent-pipeline-architecture.md  adr-003-file-based-persistence.md  adr-004-userproxy-human-in-the-loop.md  adr-005-comprehensive-sdlc-automation.md
docs/deployment/: DEPLOYMENT_GUIDE.md
docs/guides/: GETTING_STARTED.md
docs/operations/: DISASTER_RECOVERY.md  INCIDENT_RESPONSE.md  OBSERVABILITY_IMPLEMENTATION.md  PERFORMANCE_MONITORING.md  SLA_SLO_DEFINITIONS.md
docs/security/: SLSA_COMPLIANCE.md  SUPPLY_CHAIN_SECURITY.md
docs/status/: execution_20250818_032212.json  execution_20250818_032306.json  execution_20250818_032346.json  execution_20250825_111049.json  execution_20250825_111109.json  last_execution.json  latest.json  latest_quantum.json  latest_scalable_quantum.json  quantum_execution_20250823_233929.json  quantum_execution_20250825_111731.json  status_20250726_052551.json  status_20250726_052552.json  status_20250726_052554.json  status_20250726_052555.json  status_20250726_052556.json  status_20250726_052558.json  status_20250726_052559.json  status_20250726_052600.json  status_20250726_052602.json  status_20250726_052603.json  status_20250726_052604.json  status_20250726_052606.json  status_20250726_052607.json  status_20250726_052608.json  status_20250726_052609.json  status_20250726_052611.json  status_20250726_052612.json  status_20250726_052613.json  status_20250726_052615.json  (+73 more)
escalations/: json-sample-task_escalation.json
examples/: sentiment_examples.py
github-workflows-template/: README.md  ci.yml  release.yml  security.yml
k8s/: sentiment-deployment.yaml
locales/: de-DE.json  en-US.json  es-ES.json  fr-FR.json  ja-JP.json  zh-CN.json
monitoring/: prometheus-sentiment.yml
nginx/: sentiment.conf
performance_reports/: latest_optimization.json  performance_optimization_1755633922.json  performance_optimization_1755633940.json  performance_optimization_1756120369.json
quality_reports/: latest_quality_report.json  quality_gates_20250804_040923.json  quality_gates_20250805_170510.json  quality_gates_20250805_170859.json  quality_gates_20250810_074640.json  quality_gates_20250815_023255.json  quality_gates_20250816_191258.json  quality_gates_20250816_191321.json  quality_gates_20250816_191650.json  quality_gates_20250818_032458.json  quality_gates_20250819_200107.json  quality_gates_20250819_200221.json  quality_gates_20250819_200302.json  quality_gates_20250819_200338.json  quality_gates_20250819_200614.json  quality_gates_20250821_013802.json  quality_gates_20250825_111303.json
scripts/: automate_maintenance.py  check_imports.py  collect_metrics.py  deploy-sentiment.sh  generate_sbom.py  repository_health_monitor.py  run_automation.sh  security_scan.sh  validate_schemas.py
security_reports/: security_scan_20250810_074122.json  security_scan_20250810_074337.json  security_scan_20250810_074421.json  security_scan_20250818_032426.json  security_scan_20250825_111224.json  security_scan_latest.json
src/: __init__.py
stubs/: ado.pyi
tests/: __init__.py  conftest.py  test_comprehensive_integration.py  test_comprehensive_validation.py  test_template.py
validation_reports/: enhanced_validation_20250815_023429.md  enhanced_validation_20250818_032459.json  enhanced_validation_20250818_032459.md  enhanced_validation_20250819_200621.json  enhanced_validation_20250819_200621.md  enhanced_validation_latest.json
validation_results/: generation_1_results.json  generation_2_results.json  generation_3_results.json
(+80 files in other folders)
